vcluster-multi-env/vcluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # We need the ingress to pass through ssl traffic to the vCluster
    # This only works for the nginx-ingress (enable via --enable-ssl-passthrough
    # https://kubernetes.github.io/ingress-nginx/user-guide/tls/#ssl-passthrough )
    # for other ingress controllers please check their respective documentation.
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: vcluster-ingress
  labels:
    cnoe.io/stackName: vcluster-multi-env
spec:
  ingressClassName: nginx # use your ingress class name
  rules:
  - host: unpatched-vcluster-hostname.cnoe.localtest.me
    http:
      paths:
      - backend:
          service:
            name: unpatched-vcluster-services
            port:
              number: 443
        path: /
        pathType: ImplementationSpecific
